Added link to this exact repository ; added .zip of website source code

--- a/portfolio.html
+++ b/portfolio.html
@@ -92,8 +92,15 @@
                         <td>My personal website. The one you're currently on! I had to re-teach myself HTML and CSS
                             in order to put it together. I also had to learn a tiny bit of PHP to do the contact
                             page.
+                            <br><br>
+                            Note that the .zip download will <i>only</i> contain the .html, .css, and .php file(s) that make
+                            up the site, as well as the images. In other words, the project .zips and the resume files are
+                            not included, to reduce the size of the download.
                         </td>
-                        <td class="table-center">GitHub<br><br>.zip file</td>
+                        <td class="table-center">
+                            <a href="https://github.com/jordanknapp00/Personal-Website">GitHub</a><br><br>
+                            <a href="file/proj/mysite.zip" download>.zip file</a>
+                        </td>
                     </tr>
                 </table>
                 <!-- Major Projects tables for small screens -->
