--- a/portfolio.html
+++ b/portfolio.html
@@ -93,7 +93,7 @@
                             in order to put it together. I also had to learn a tiny bit of PHP to do the contact
                             page.
                             <br><br>
-                            Note that the .zip download will <i>only</i> contain the .html, .css, and .php file(s) that make
+                            Note that the .zip download will <i>only</i> contain the .html, .css, and .php files that make
                             up the site, as well as the images. In other words, the project .zips and the resume files are
                             not included, to reduce the size of the download.
                         </td>
@@ -197,12 +197,17 @@
                         <td>My personal website. The one you're currently on! I had to re-teach myself HTML and CSS
                             in order to put it together. I also had to learn a tiny bit of PHP to do the contact
                             page.
+                            <br><br>
+                            Note that the .zip download will <i>only</i> contain the .html, .css, and .php files that make
+                            up the site, as well as the images. In other words, the project .zips and the resume files are
+                            not included, to reduce the size of the download.
                         </td>
                     </tr>
                     <tr>
                         <th>Download</th>
                         <td class="table-center">
-                            GitHub&emsp;&emsp;.zip file
+                            <a href="https://github.com/jordanknapp00/Personal-Website">GitHub</a>&emsp;&emsp;
+                            <a href="file/proj/mysite.zip" download>.zip file</a>
                         </td>
                     </tr>
                 </table>
