Updated site to include Smash Character Picker v10.1

--- a/smashold.html
+++ b/smashold.html
@@ -165,7 +165,20 @@
                         </td>
                         <td class="table-center"><a href="file/proj/Smash-Character-Picker-8.0.zip" download>Download</a></td>
                     </tr>
+                    <tr>
+                        <td class="table-center">v9.0</td>
+                        <td class="table-center">March 2021</td>
+                        <td>v9.0 was originally intended to be the final version of the program. The changes are relatively
+                            minor, mostly small, under the hood things. A handful of bug fixes and a good amount of code
+                            optimization, basically. It features inline functions for
+                            <span style="font-family:'Courier New', Courier, monospace">ActionListner</span> classes. And the
+                            soundboard has essentially been rewritten from scratch to reduce code duplication. It went from
+                            around 700 lines to around 300. Other than that, few changes in this version.
+                        </td>
+                        <td class="table-center"><a href="file/proj/Smash-Character-Picker-9.0.zip" download>Download</a></td>
+                    </tr>
                 </table>
+                <br><br> <!-- This is kind of stupid, but if it's stupid and it works... -->
             </section>
             <section class="small-screen">
                 <table>
@@ -395,16 +408,36 @@
                         <td>This version introduces the stat-tracking system. Each player's winrate with each fighter
                             can be tracked. Fighters can also be sorted by their overall winrate, each player's winrate,
                             and the total number of battles they've appeared in.
-                            <br><br>
-                            The current version, v9.0, is almost the same as v8.0. There are some bug fixes here and
-                            there, as well as general code optimization. v8.0 does not feature inline functions for
-                            ActionListeners, and it does not feature soundboard optimizations that cut down extensively
-                            on code duplication. Both of those features are introduced in v9.0.
                         </td>
                     </tr>
                     <tr>
                         <th>Download</th>
                         <td class="table-center"><a href="file/proj/Smash-Character-Picker-8.0.zip" download>Download</a></td>
+                    </tr>
+                </table>
+                <br>
+                <table>
+                    <tr>
+                        <th>Version</th>
+                        <td class ="table-center">v9.0</td>
+                    </tr>
+                    <tr>
+                        <th>Date</th>
+                        <td class="table-center">March 2021</td>
+                    </tr>
+                    <tr>
+                        <th>Description</th>
+                        <td>v9.0 was originally intended to be the final version of the program. The changes are relatively
+                            minor, mostly small, under the hood things. A handful of bug fixes and a good amount of code
+                            optimization, basically. It features inline functions for
+                            <span style="font-family:'Courier New', Courier, monospace">ActionListner</span> classes. And the
+                            soundboard has essentially been rewritten from scratch to reduce code duplication. It went from
+                            around 700 lines to around 300. Other than that, few changes in this version.
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Download</th>
+                        <td class="table-center"><a href="file/proj/Smash-Character-Picker-9.0.zip" download>Download</a></td>
                     </tr>
                 </table>
             </section>
