Added disclaimer about my GitHub use to portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -28,6 +28,12 @@
                             while .zip downloads are available for all projects. Direct downloads for Java projects will
                             include an executable .jar file.
                         </p>
+                        <p>Note that the projects on GitHub do not follow any kind of branching scheme. I didn't use GitHub
+                            when developing these projects, and I didn't know about proper GitHub use when initially uploading
+                            the projects to GitHub. I'm currently taking a software engineering course, and I now know how to
+                            use a develop branch, release branches, feature branches, etc. But I was not able to employ that
+                            knowledge when creating the repositories for these personal projects.
+                        </p>
                 </article>
             </section>
             <section>
