Fixed inconsistent spacing between tables

--- a/portfolio.html
+++ b/portfolio.html
@@ -151,7 +151,7 @@
                         </td>
                     </tr>
                 </table>
-                <br>
+                <br class="small-screen">
                 <!-- TV Show Episode Picker small screen table -->
                 <table class="small-screen">
                     <tr>
@@ -183,7 +183,7 @@
                         </td>
                     </tr>
                 </table>
-                <br>
+                <br class="small-screen">
                 <!-- Website small screen table-->
                 <table class="small-screen">
                     <tr>
@@ -331,7 +331,7 @@
                         </td>
                     </tr>
                 </table>
-                <br>
+                <br class="small-screen">
                 <!-- Monty Hall Simulator small screen table -->
                 <table class="small-screen">
                     <tr>
@@ -360,7 +360,7 @@
                         <td class="table-center"><a href="file/proj/montyhall.zip" download>Download</a></td>
                     </tr>
                 </table>
-                <br>
+                <br class="small-screen">
                 <!-- Algorithms small screen table -->
                 <table class="small-screen">
                     <tr>
@@ -391,7 +391,7 @@
                         <td class="table-center"><a href="file/proj/sortalgs.zip" download>Download</a></td>
                     </tr>
                 </table>
-                <br>
+                <br class="small-screen">
                 <!-- Game Engine small screen table -->
                 <table class="small-screen">
                     <tr>
@@ -497,7 +497,7 @@
                         </td>
                     </tr>
                 </table>
-                <br>
+                <br class="small-screen">
                 <!-- Media Rental Manager small screen table -->
                 <table class="small-screen">
                     <tr>
@@ -580,7 +580,7 @@
                         </td>
                     </tr>
                 </table>
-                <br>
+                <br class="small-screen">
                 <!-- Graph Implementation small screen table -->
                 <table class="small-screen">
                     <tr>
@@ -685,7 +685,7 @@
                         <td>Programming in C, implementation of data structures.</td>
                     </tr>
                 </table>
-                <br>
+                <br class="small-screen">
                 <!-- Unix Filesystem Simulator small screen table -->
                 <table class="small-screen">
                     <tr>
@@ -719,7 +719,7 @@
                         <td>Advanced C programming, including memory management, pointers, structs, etc.</td>
                     </tr>
                 </table>
-                <br>
+                <br class="small-screen">
                 <!-- C to MIPS small screen table -->
                 <table class="small-screen">
                     <tr>
@@ -742,7 +742,7 @@
                         <td>Assembly language (including function calls).</td>
                     </tr>
                 </table>
-                <br>
+                <br class="small-screen">
                 <!-- pthreaded WC small screen table -->
                 <table class="small-screen">
                     <tr>
@@ -829,7 +829,7 @@
                         </td>
                     </tr>
                 </table>
-                <br>
+                <br class="small-screen">
                 <!-- SmallC Lexer/Parser/Interpreter small screen table -->
                 <table class="small-screen">
                     <tr>
@@ -928,7 +928,7 @@
                         <td>Java multithreading, including synchronized blocks, semaphores, etc.</td>
                     </tr>
                 </table>
-                <br>
+                <br class="small-screen">
                 <!-- Akka small screen table -->
                 <table class="small-screen">
                     <tr>
@@ -951,7 +951,7 @@
                         <td>Use of Akka and general actor-based concurrency concepts.</td>
                     </tr>
                 </table>
-                <br>
+                <br class="small-screen">
                 <!-- Game of Life MPI small screen table -->
                 <table class="small-screen">
                     <tr>
@@ -1227,7 +1227,7 @@
                         <td>Use of SQL.</td>
                     </tr>
                 </table>
-                <br>
+                <br class="small-screen">
                 <!-- JDBC small screen table -->
                 <table class="small-screen">
                     <tr>
@@ -1249,7 +1249,7 @@
                         <td>Use of JDBC.</td>
                     </tr>
                 </table>
-                <br>
+                <br class="small-screen">
                 <!-- B+ Tree small screen table -->
                 <table class="small-screen">
                     <tr>
@@ -1277,7 +1277,7 @@
                         </td>
                     </tr>
                 </table>
-                <br>
+                <br class="small-screen">
                 <!-- MongoDB and Spark small screen table -->
                 <table class="small-screen">
                     <tr>
@@ -1298,6 +1298,7 @@
                     </tr>
                 </table>
             </section>
+            <br><br>
         </main>
     </body>
 </html>
