Updated portfolio with new dungeon generator project

--- a/portfolio.html
+++ b/portfolio.html
@@ -108,6 +108,25 @@
                             <a href="file/proj/mysite.zip" download>.zip file</a>
                         </td>
                     </tr>
+                    <tr>
+                        <td>Dungeon Generator</td>
+                        <td class="table-center">C#</td>
+                        <td class="table-center">April 2022</td>
+                        <td>A program that generates simple dungeons in the style of
+                            <a href="https://en.wikipedia.org/wiki/Rogue_(video_game)">Rogue</a> (1980). The algorithm is
+                            based on one written by my game development professor, which itself was based on the algorithm
+                            used in Rogue. What I've done is added the ability to customize the dungeon via command line
+                            parameters. I've also added some object-oriented features to the program.
+                            <br><br>
+                            For details on how to use it, see the README on GitHub, or the one included with the download.
+                            <br><br>
+                            <b>This program is text-based, designed to be run from the command line.</b>
+                        </td>
+                        <td class="table-center">
+                            <a href="https://github.com/jordanknapp00/Dungeon-Generator">GitHub</a><br><br>
+                            <a href="file/proj/dungen.zip" download>.zip file</a><br>(source code only for now)
+                        </td>
+                    </tr>
                 </table>
                 <!-- Major Projects tables for small screens -->
                 <!-- Smash Character Picker small screen table -->
@@ -214,6 +233,38 @@
                         <td class="table-center">
                             <a href="https://github.com/jordanknapp00/Personal-Website">GitHub</a>&emsp;&emsp;
                             <a href="file/proj/mysite.zip" download>.zip file</a>
+                        </td>
+                    </tr>
+                </table>
+                <br class="small-screen">
+                <!-- Dungeon Generator small screen table -->
+                <table class="small-screen">
+                    <tr>
+                        <th>Name</th>
+                        <td class="table-center">Dungeon Generator</td>
+                    </tr>
+                    <tr>
+                        <th>Date</th>
+                        <td class="table-center">April 2022</td>
+                    </tr>
+                    <tr>
+                        <th>Description</th>
+                        <td>A program that generates simple dungeons in the style of
+                            <a href="https://en.wikipedia.org/wiki/Rogue_(video_game)">Rogue</a> (1980). The algorithm is
+                            based on one written by my game development professor, which itself was based on the algorithm
+                            used in Rogue. What I've done is added the ability to customize the dungeon via command line
+                            parameters. I've also added some object-oriented features to the program.
+                            <br><br>
+                            For details on how to use it, see the README on GitHub, or the one included with the download.
+                            <br><br>
+                            <b>This program is text-based, designed to be run from the command line.</b>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Download</th>
+                        <td class="table-center">
+                            <a href="https://github.com/jordanknapp00/Dungeon-Generator">GitHub</a>&ensp;
+                            <a href="file/proj/dungen.zip" download>.zip file</a><br>(source code only for now)
                         </td>
                     </tr>
                 </table>
