Updated portfolio to add executable version of dungen

--- a/portfolio.html
+++ b/portfolio.html
@@ -109,14 +109,17 @@
                         </td>
                     </tr>
                     <tr>
-                        <td>Dungeon Generator</td>
+                        <td>Dungeon Generator (AKA dungen)</td>
                         <td class="table-center">C#</td>
                         <td class="table-center">April 2022</td>
                         <td>A program that generates simple dungeons in the style of
                             <a href="https://en.wikipedia.org/wiki/Rogue_(video_game)">Rogue</a> (1980). The algorithm is
                             based on one written by my game development professor, which itself was based on the algorithm
-                            used in Rogue. What I've done is added the ability to customize the dungeon via command line
-                            parameters. I've also added some object-oriented features to the program.
+                            used in Rogue. I've added the ability to customize the dungeon via command line parameters. I've
+                            also added some object-oriented features to the program. I wrote this project attempting to use
+                            good software engineering practices (particularly the use of develop and feature branches), in
+                            order to build that up as a habit. I also wrote it as a test of my C# skills outisde the context
+                            of Unity development.
                             <br><br>
                             For details on how to use it, see the README on GitHub, or the one included with the download.
                             <br><br>
@@ -124,7 +127,8 @@
                         </td>
                         <td class="table-center">
                             <a href="https://github.com/jordanknapp00/Dungeon-Generator">GitHub</a><br><br>
-                            <a href="file/proj/dungen.zip" download>.zip file</a><br>(source code only for now)
+                            <a href="file/proj/dungen.zip" download>Executable</a><br><br>
+                            <a href="file/proj/dungen-src.zip" download>Source code .zip</a>
                         </td>
                     </tr>
                 </table>
@@ -241,7 +245,11 @@
                 <table class="small-screen">
                     <tr>
                         <th>Name</th>
-                        <td class="table-center">Dungeon Generator</td>
+                        <td class="table-center">Dungeon Generator (AKA dungen)</td>
+                    </tr>
+                    <tr>
+                        <th>Language</th>
+                        <td class="table-center">C#</td>
                     </tr>
                     <tr>
                         <th>Date</th>
@@ -252,8 +260,11 @@
                         <td>A program that generates simple dungeons in the style of
                             <a href="https://en.wikipedia.org/wiki/Rogue_(video_game)">Rogue</a> (1980). The algorithm is
                             based on one written by my game development professor, which itself was based on the algorithm
-                            used in Rogue. What I've done is added the ability to customize the dungeon via command line
-                            parameters. I've also added some object-oriented features to the program.
+                            used in Rogue. I've added the ability to customize the dungeon via command line parameters. I've
+                            also added some object-oriented features to the program. I wrote this project attempting to use
+                            good software engineering practices (particularly the use of develop and feature branches), in
+                            order to build that up as a habit. I also wrote it as a test of my C# skills outisde the context
+                            of Unity development.
                             <br><br>
                             For details on how to use it, see the README on GitHub, or the one included with the download.
                             <br><br>
@@ -264,7 +275,8 @@
                         <th>Download</th>
                         <td class="table-center">
                             <a href="https://github.com/jordanknapp00/Dungeon-Generator">GitHub</a>&ensp;
-                            <a href="file/proj/dungen.zip" download>.zip file</a><br>(source code only for now)
+                            <a href="file/proj/dungen.zip" download>Executable</a>&ensp;
+                            <a href="file/proj/dungen-src.zip" download>Source code .zip</a>
                         </td>
                     </tr>
                 </table>
