Fixed a typo (this is why proofreading is important). I also changed another sentence though, so this is obviously a very important commit

--- a/portfolio.html
+++ b/portfolio.html
@@ -115,11 +115,11 @@
                         <td>A program that generates simple dungeons in the style of
                             <a href="https://en.wikipedia.org/wiki/Rogue_(video_game)">Rogue</a> (1980). The algorithm is
                             based on one written by my game development professor, which itself was based on the algorithm
-                            used in Rogue. I've added the ability to customize the dungeon via command line parameters. I've
-                            also added some object-oriented features to the program. I wrote this project attempting to use
-                            good software engineering practices (particularly the use of develop and feature branches), in
-                            order to build that up as a habit. I also wrote it as a test of my C# skills outisde the context
-                            of Unity development.
+                            used in Rogue. I've modified the algorithm a little bit and added the ability to customize the
+                            dungeon via command line parameters. I've also added some object-oriented features to the program.
+                            I wrote this project attempting to use good software engineering practices (particularly the use
+                            of develop and feature branches), in order to build that up as a habit. I also wrote it as a test
+                            of my C# skills outside the context of Unity development.
                             <br><br>
                             For details on how to use it, see the README on GitHub, or the one included with the download.
                             <br><br>
@@ -260,11 +260,11 @@
                         <td>A program that generates simple dungeons in the style of
                             <a href="https://en.wikipedia.org/wiki/Rogue_(video_game)">Rogue</a> (1980). The algorithm is
                             based on one written by my game development professor, which itself was based on the algorithm
-                            used in Rogue. I've added the ability to customize the dungeon via command line parameters. I've
-                            also added some object-oriented features to the program. I wrote this project attempting to use
-                            good software engineering practices (particularly the use of develop and feature branches), in
-                            order to build that up as a habit. I also wrote it as a test of my C# skills outisde the context
-                            of Unity development.
+                            used in Rogue. I've modified the algorithm a little bit and added the ability to customize the
+                            dungeon via command line parameters. I've also added some object-oriented features to the program.
+                            I wrote this project attempting to use good software engineering practices (particularly the use
+                            of develop and feature branches), in order to build that up as a habit. I also wrote it as a test
+                            of my C# skills outside the context of Unity development.
                             <br><br>
                             For details on how to use it, see the README on GitHub, or the one included with the download.
                             <br><br>
