--- a/resume.html
+++ b/resume.html
@@ -39,8 +39,7 @@
                 <article class="resume">
                     <h2>Education</h2>
                     <ul>
-                        <li><b>University of Maryland, College Park
-                            <span class="resume-right">Graduation: May 2022</span></b></li>
+                        <li><b>University of Maryland, College Park (2018 - 2022)</b></li>
                         <ul>
                             <li>Bachelor of Science, Computer Science</li>
                             <li>Minor: History</li>
@@ -49,15 +48,13 @@
                     </ul>
                     <h2>Work Experience</h2>
                     <ul>
-                        <li><i>Atlantic Abstracting Services, LLC</i> — Snow Hill, Maryland
-                            <b><span class="resume-right">June - August 2018</span></b></li>
+                        <li><i>Atlantic Abstracting Services, LLC</i> — Snow Hill, Maryland <b>(June - August 2018)</b></li>
                         <ul>
                             <li>Digitization of paper files</li>
                             <li>Organization and management of files</li>
                             <li>Minor technical support</li>
                         </ul>
-                        <li><i>Mountains Wanted Publishing</i> — Georgetown, Delaware
-                            <b><span class="resume-right">2016, 2017 Summers</span></b></li>
+                        <li><i>Mountains Wanted Publishing</i> — Georgetown, Delaware <b>(2016, 2017 Summers)</b></li>
                         <ul>
                             <li>Inventory management</li>
                             <li>Database management</li>
@@ -66,26 +63,34 @@
                     </ul>
                     <h2>Volunteer and Community Service</h2>
                     <ul>
-                        <li><b>Chess Club Mentor</b>, <i>Pinehurst Elementary School</i> — Salisbury, Maryland
-                            <b><span class="resume-right">2014 - 2016</span></b></li>
-                        <li><b>Math tutoring</b>, <i>Bennett Middle School</i> — Salisbury, Maryland
-                            <b><span class="resume-right">2012 - 2014</span></b></li>
+                        <li><b>Chess Club Mentor</b>, <i>Pinehurst Elementary School</i> — Salisbury, Maryland <b>(2014 - 2016)</b></li>
+                        <li><b>Math tutoring</b>, <i>Bennett Middle School</i> — Salisbury, Maryland <b>(2012 - 2014)</b></li>
                     </ul>
                     <h2>Skills</h2>
                     <ul>
-                        <li>Programming Languages</li>
+                        <li>Programming Languages (roughly in order of level of experience)</li>
                         <ul>
-                            <li>Expertise in Java</li>
-                            <li>Knowledgable in Python, C, and Ruby</li>
-                            <li>Experience with MIPS Assembly and OCaml, as well as HTML and CSS</li>
+                            <li>Java</li>
+                            <li>C#</li>
+                            <li>Python</li>
+                            <li>C</li>
+                            <li>Ruby</li>
+                            <li>MIPS Assembly</li>
+                            <li>OCaml</li>
                         </ul>
                         <li>Database Systems</li>
                         <ul>
                             <li>Experience with SQL, MongoDB, and Spark</li>
                         </ul>
+                        <li>Web Development</li>
+                        <ul>
+                            <li>Knowledgable with HTML and CSS</li>
+                            <li>Experience with the Django framework to develop web apps using Python</li>
+                        </ul>
                         <li>Able to work effectively in a team environment</li>
                         <ul>
                             <li>Experience using Git to collaborate with others</li>
+                            <li>Experience following Agile principles to develop software</li>
                         </ul>
                         <li>Experience in hardware installation, including several computer builds, both laptop and
                             desktop.</li>
